Don't display the footer on mobile. Fix #19

--- a/theme/static/css/mods.css
+++ b/theme/static/css/mods.css
@@ -75,6 +75,12 @@ footer {
     background-color: rgba(255, 255, 255, 0.4);
 }
 
+@media (max-width: 1200px) {
+    footer {
+        display: none;
+    }
+}
+
 /* CAROUSEL
  * ------------------------------------------------*/
 
